# vision_omni

./: .gitignore  ARCHITECTURE.md  CODEBASE.md  README.md  main.py  pyproject.toml
agent/: app.py  loop.py  pyproject.toml
agent/actors/: anthropic_actor.py  vlm_actor.py  vlm_orchestrated_actor.py
agent/actors/llm/: groq_client.py  openai_client.py  openrouter_client.py  parser_client.py  utils.py
agent/executor/: executor.py
agent/tools/: __init__.py  base.py  collection.py  computer.py  config.py  screen_capture.py
agent/utils/: __init__.py  timer.py
desktop/: pyproject.toml  server.py
omnitool/gradio/: app.py
omnitool/gradio/tools/: __init__.py  computer.py  config.py  screen_capture.py
omnitool/omnibox/: Dockerfile  compose.yml
omnitool/omnibox/scripts/: manage_vm.ps1  manage_vm.sh
omnitool/omnibox/vm/buildcontainer/: entry.sh  samba.sh
omnitool/omnibox/vm/win11setup/setupscripts/: on-logon.ps1  run.bat  setup.ps1  setup_log.txt
omnitool/omnibox/vm/win11setup/setupscripts/server/: main.py
parser/: box_annotator.py  omniparser.py  pyproject.toml  server.py  setup_weights.py  utils.py
util/: omniparser.py
