[project]
name = "omniparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "torch",
    "torchvision",
    "numpy==1.26.4",
    "opencv-python",
    "matplotlib",
    "easyocr",
    "paddlepaddle",
    "paddleocr>=2.7,<3",
    "supervision==0.18.0",
    "ultralytics==8.3.70",
    "transformers>=4.38,<4.46",
    "openai",
    "accelerate",
    "timm",
    "einops==0.8.0",
    "pydantic",
    "gradio>=6.9.0",
    "anthropic>=0.84.0",
    "groq>=1.1.1",
]
